Fix navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,10 @@ h4 {
   overflow-y: scroll;
 }
 
-#navbar {
-  max-height: 100vh;
-  overflow-y: scroll;
+@media (min-width: 992px) {
+  #navbar {
+    max-height: 100vh;
+    overflow-y: scroll;
+    padding-right: 15px;
+  }
 }
